--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,16 @@
 spring:
 
   datasource:
-    url: jdbc:mysql://localhost:3306/supply?useSSL=false&allowPublicKeyRetrieval=true&tinyInt1isBit=false
+    url: jdbc:mysql://prayforyou-dev-instance-1.chz2rw6hxdnq.ap-northeast-2.rds.amazonaws.com:3306/supply?useSSL=false&allowPublicKeyRetrieval=true&tinyInt1isBit=false
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: local
+    username: admin
+    password: rladudtjr1!
 
   jpa:
     open-in-view: false
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     show-sql: true
 
 decorator:
