--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,18 @@
 spring:
 
   datasource:
-    url: jdbc:mysql://prayforyou-dev-instance-1.chz2rw6hxdnq.ap-northeast-2.rds.amazonaws.com:3306/supply?useSSL=false&allowPublicKeyRetrieval=true&tinyInt1isBit=false
+    url: jdbc:mysql://localhost:3306/supply?useSSL=false&allowPublicKeyRetrieval=true&tinyInt1isBit=false
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: admin
-    password: rladudtjr1!
+    username: root
 
   jpa:
     open-in-view: false
-    database-platform: org.hibernate.dialect.MySQL8Dialect
+    database-platform: org.hibernate.spatial.dialect.mysql.MySQL8SpatialDialect
     hibernate:
       ddl-auto: none
     show-sql: true
+    properties:
+      database-platform: org.hibernate.spatial.dialect.mysql.MySQL8SpatialDialect
 
 decorator:
   datasource:
