--- a/.github/workflows/prayforyou-prod-deploy.yml
+++ b/.github/workflows/prayforyou-prod-deploy.yml
@@ -21,13 +21,13 @@ jobs:
           distribution: 'adopt'
 
       - name: Grant execute permission for gradlew
-        working-directory: ./server-app
+        working-directory: .
         run: chmod +x ./gradlew
         shell: bash
 
       - name: Build with Gradle
-        working-directory: ./server-app
-        run: ./gradlew clean build
+        working-directory: .
+        run: ./gradlew clean bootJar
         shell: bash
 
       - name: Get current time
