--- a/.github/workflows/prayforyou-prod-deploy.yml
+++ b/.github/workflows/prayforyou-prod-deploy.yml
@@ -40,10 +40,10 @@ jobs:
       - name: Generate deployment package
         run: |
           mkdir -p deploy
-          cp server-app/build/libs/server-app.jar deploy/todo-application-prod-ebextensions-1.jar
+          cp ./build/libs/backend-0.0.1-SNAPSHOT.jar deploy/prayforyou-prod-ebextensions-1.jar
           cp Procfile deploy/Procfile
           cp -r .ebextensions deploy/.ebextensions
-          cd deploy && zip -r todo-application-prod-label-${{steps.current-time.outputs.formattedTime}}-${{github.sha}} .
+          cd deploy && zip -r prayforyou-prod-label-${{steps.current-time.outputs.formattedTime}}-${{github.sha}} .
 
       - name: Deploy Consumer to EB
         uses: einaregilsson/beanstalk-deploy@v14
