--- a/.github/workflows/prayforyou-prod-deploy.yml
+++ b/.github/workflows/prayforyou-prod-deploy.yml
@@ -50,8 +50,8 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: prayforyou-application-prod
+          application_name: prayforyou-prod
           environment_name: PrayforyouProd-env
-          version_label: prayforyou-application-prod-label-${{steps.current-time.outputs.formattedTime}}-${{github.sha}}
+          version_label: prayforyou-prod-label-${{steps.current-time.outputs.formattedTime}}-${{github.sha}}
           region: ap-northeast-2
-          deployment_package: deploy/prayforyou-application-prod-label-${{steps.current-time.outputs.formattedTime}}-${{github.sha}}.zip
+          deployment_package: deploy/prayforyou-prod-label-${{steps.current-time.outputs.formattedTime}}-${{github.sha}}.zip
