--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     database-platform: org.hibernate.spatial.dialect.mysql.MySQL8SpatialDialect
     hibernate:
       # 반드시 none or validate 설정 할것
-      ddl-auto: update
+      ddl-auto: none
     show-sql: true
     properties:
       database-platform: org.hibernate.spatial.dialect.mysql.MySQL8SpatialDialect
