--- a/.github/workflows/prayforyou-prod-deploy.yml
+++ b/.github/workflows/prayforyou-prod-deploy.yml
@@ -53,7 +53,7 @@ jobs:
           cp ./build/libs/backend-0.0.1-SNAPSHOT.jar deploy/prayforyou-prod-ebextensions-1.jar
           cp Procfile deploy/Procfile
           cp -r .ebextensions deploy/.ebextensions
-          cp whatap/watap.agent-2.1.3.jar deploy/watap.agent-2.1.3.jar
+          cp ./whatap/watap.agent-2.1.3.jar deploy/watap.agent-2.1.3.jar
           cd deploy && zip -r prayforyou-prod-label-${{steps.current-time.outputs.formattedTime}}-${{github.sha}} .
 
       - name: Deploy Consumer to EB
