--- a/.github/workflows/prayforyou-prod-deploy.yml
+++ b/.github/workflows/prayforyou-prod-deploy.yml
@@ -25,16 +25,6 @@ jobs:
         run: chmod +x ./gradlew
         shell: bash
 
-      - name: Grant execute permission for whatapp
-        working-directory: .
-        run: chmod +x ./whatap
-        shell: bash
-
-      - name: execute whatap
-        working-directory: .
-        run: sh ./whatap/start.sh
-        shell: bash
-
       - name: Build with Gradle
         working-directory: .
         run: ./gradlew clean bootJar
@@ -53,7 +43,7 @@ jobs:
           cp ./build/libs/backend-0.0.1-SNAPSHOT.jar deploy/prayforyou-prod-ebextensions-1.jar
           cp Procfile deploy/Procfile
           cp -r .ebextensions deploy/.ebextensions
-          cp ./whatap/watap.agent-2.1.3.jar deploy/watap.agent-2.1.3.jar
+          cp ./whatap/whatap.agent-2.1.3.jar deploy/whatap.agent-2.1.3.jar
           cd deploy && zip -r prayforyou-prod-label-${{steps.current-time.outputs.formattedTime}}-${{github.sha}} .
 
       - name: Deploy Consumer to EB
