--- a/whatap/whatap.conf
+++ b/whatap/whatap.conf
@@ -1,5 +1,5 @@
 license=x4oo220v9642i-x7vcur79tvhvbi-x52qfm12a5rgj2
-whatap.server.host=api.pray4you.net
+whatap.server.host=3.35.168.154
 tx_caller_meter_enabled=true
 sql_dbc_meter_enabled=true
 httpc_host_meter_enabled=true
