subscribe 크롤링 서버 개발

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,3 +21,15 @@ decorator:
   datasource:
     p6spy:
       enable-logging: true
+
+cloud:
+  aws:
+    region:
+      static: ap-northeast-2
+    credentials:
+      access-key: AKIATUDSM3BLER26HJO2
+      secret-key: 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
+    sqs:
+      queue:
+        name: crawler
+        url: https://sqs.ap-northeast-2.amazonaws.com/249348020310/crawler
