--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,31 +4,21 @@ spring:
   datasource:
     url: jdbc:mysql://database-1.chz2rw6hxdnq.ap-northeast-2.rds.amazonaws.com:3306/supply?useSSL=false&allowPublicKeyRetrieval=true&tinyInt1isBit=false
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
+    username: admin
+    password: rladudtjr1!
 
   jpa:
     open-in-view: false
     database-platform: org.hibernate.spatial.dialect.mysql.MySQL8SpatialDialect
     hibernate:
       # 반드시 none or validate 설정 할것
-      ddl-auto: update
-#    show-sql: true
+      ddl-auto: none
+    show-sql: true
     properties:
       database-platform: org.hibernate.spatial.dialect.mysql.MySQL8SpatialDialect
 
-#decorator:
-#  datasource:
-#    p6spy:
-#      enable-logging: true
+decorator:
+  datasource:
+    p6spy:
+      enable-logging: true
 
-cloud:
-  aws:
-    region:
-      static: ap-northeast-2
-    credentials:
-      access-key: AKIATUDSM3BLER26HJO2
-      secret-key: 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
-    sqs:
-      queue:
-        name: prayforyou.fifo
-        url: https://sqs.ap-northeast-2.amazonaws.com/249348020310/prayforyou.fifo
