--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,17 +4,18 @@ spring:
   datasource:
     url: jdbc:mysql://database-1.chz2rw6hxdnq.ap-northeast-2.rds.amazonaws.com:3306/supply?useSSL=false&allowPublicKeyRetrieval=true&tinyInt1isBit=false
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: admin
-    password: rladudtjr1!
+    username: root
 
   jpa:
-    open-in-view: false
+    open-in-view: true
     database-platform: org.hibernate.spatial.dialect.mysql.MySQL8SpatialDialect
     hibernate:
       # 반드시 none or validate 설정 할것
       ddl-auto: none
     show-sql: true
     properties:
+      hibernate:
+        default_batch_fetch_size: 1000
       database-platform: org.hibernate.spatial.dialect.mysql.MySQL8SpatialDialect
 
 decorator:
