--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,20 @@
+server:
+  forward-headers-strategy: framework
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE  # 메모리 기반 H2 데이터베이스
-    driver-class-name: org.h2.Driver
-    username: sa  # 기본 사용자 이름
-    password:  # 비밀번호는 비워두어도 됩니다.
-    hikari:
-      maximum-pool-size: 10  # HikariCP 연결 풀 사이즈 설정
-  h2:
-    console:
-      enabled: true  # H2 콘솔 활성화
-      path: /h2-console  # H2 콘솔에 접근할 경로
+    url: jdbc:mysql://database-1.cr6mwomo4s1d.ap-northeast-2.rds.amazonaws.com/supply
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: admin
+    password: rladudtjr1!
   jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+        hbm2ddl:
+          auto: update           # 이 옵션은 테이블을 자동으로 업데이트하지만 외래 키 제약을 비활성화할 수 있음
+        # 외래 키 제약 비활성화 설정
+        javax.persistence.schema-generation.scripts.create-target: none
+        hibernate.temp.use_jdbc_metadata_defaults: false
     hibernate:
       ddl-auto: create  # 애플리케이션 시작 시 데이터베이스 스키마를 자동으로 업데이트
+    database-platform: org.hibernate.dialect.MySQL8Dialect
